<resources>
    <string name="app_name">CarVisor</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="wrong_password">Niepoprawne hasło</string>
    <string name="my_fleet">Moja flota</string>
    <string name="my_devices">Moje pojazdy</string>
    <string name="map">Mapa</string>
    <string name="notification">Powiadomienia</string>
    <string name="ecopoints">Punkty ekojazdy</string>
    <string name="safetypoints">Punkty bezpieczeństwa</string>
    <string name="raports">Raporty</string>
    <string name="calendar">Kalendarz</string>
    <string name="errors">Błędy i awarie</string>
    <string name="my_fleet_add">Dodawanie użytkownika</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="loading">Ładowanie...</string>
    <string name="password_edit_placeholder">Pozostaw to pole puste, jeśli nie chcesz zmienić hasła.</string>
    <string name="my_fleet_edit">Edycja użytkownika</string>
    <string name="remove_user_ok">Usuń użytkownika</string>
    <string name="remove_user_cancel">Anuluj</string>
    <string name="deleting_user">Usuwanie użytkownika</string>
    <string name="my_devices_add">Dodawanie pojazdu</string>
    <string name="my_devices_edit">Edycja pojazdu</string>
    <string name="settings">Ustawienia</string>
    <string name="connecting_to_device">Połączenie z urządzeniem</string>
    <string name="deleting_device">Usuwanie pojazdu</string>
    <string name="remove_device_ok">Usuń pojazd</string>
    <string name="saving_image">Zapisywanie zdjęcia</string>
    <string name="report">Raporty</string>
    <string name="report_create">Tworzenie raportu</string>
    <string name="deleting_report">Usuwanie raportu</string>
    <string name="remove_report_ok">Usuń raport</string>

    <string name="material_calendar_monday">P</string>
    <string name="material_calendar_tuesday">W</string>
    <string name="material_calendar_wednesday">Ś</string>
    <string name="material_calendar_thursday">Cz</string>
    <string name="material_calendar_friday">Pt</string>
    <string name="material_calendar_saturday">S</string>
    <string name="material_calendar_sunday">N</string>

    <array name="material_calendar_months_array">
        <item>Styczeń</item>
        <item>Luty</item>
        <item>Marzec</item>
        <item>Kwiecień</item>
        <item>Maj</item>
        <item>Czerwiec</item>
        <item>Lipiec</item>
        <item>Sierpień</item>
        <item>Wrzesień</item>
        <item>Październik</item>
        <item>Listopad</item>
        <item>Grudzień</item>
    </array>

    <string name="material_calendar_today_button">Dzisiaj</string>
    <string name="material_calendar_positive_button">OK</string>
    <string name="material_calendar_negative_button">Anuluj</string>
    <string name="show_records">Pokaż wyniki</string>
    <string name="select_date_range_before">Zaznacz najpierw zakres daty</string>
    <string name="LEAVING_THE_ZONE">Opuszczono strefę o </string>
    <string name="SPEEDING">Przekroczono prędkość o</string>
    <string name="channel_name">Carvisor_chanel</string>
    <string name="channel_description">Carvisor chanel description</string>
    <string name="LEAVING_THE_ZONE_WATCHWORD">Uwaga!</string>
    <string name="SPEEDING_WATCHWORD">Zwolnij!</string>
    <string name="OVER_HOURS_WATCHWORD">Uwaga!</string>
    <string name="OVER_HOURS">Pojazd porusza się poza określonymi godzinami pracy</string>
    <string name="my_fleet_nfc">Przypisywanie NFC tagu</string>
    <string name="calendar_add">Dodawanie wydarzenia</string>
    <string name="calendar_edit">Edycja wydarzenia</string>
    <string name="calendar_preview">Podgląd wydarzenia</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="summary">Podsumowanie</string>
    <string name="zones">Lista stref</string>
    <string name="zone">Strefy</string>
    <string name="zones_add">Tworzenie strefy</string>
    <string name="zones_edit">Edycja strefy</string>
    <string name="zones_preview">Podgląd strefy</string>
    <string name="remove_zone_ok">Usuń strefę</string>
    <string name="deleting_zone">Usuwanie strefy</string>
</resources>