<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/nav_my_fleet">

    <fragment
        android:id="@+id/nav_my_fleet"
        android:name="eu.michalkijowski.carvisor.fragments.myFleet.list.MyFleetListFragment"
        android:label="@string/my_fleet"
        tools:layout="@layout/fragment_my_fleet_list" >
    </fragment>

            <fragment
                android:id="@+id/nav_my_fleet_add"
                android:name="eu.michalkijowski.carvisor.fragments.myFleet.add.MyFleetAddFragment"
                android:label="@string/my_fleet_add"
                tools:layout="@layout/fragment_my_fleet_add" >
            </fragment>

    <fragment
        android:id="@+id/nav_my_devices"
        android:name="eu.michalkijowski.carvisor.ui.home.HomeFragment"
        android:label="@string/my_devices"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_map"
        android:name="eu.michalkijowski.carvisor.ui.gallery.GalleryFragment"
        android:label="@string/map"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_notification"
        android:name="eu.michalkijowski.carvisor.ui.slideshow.SlideshowFragment"
        android:label="@string/notification"
        tools:layout="@layout/fragment_gallery" />
</navigation>